--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Farmers and Robots Tunnelbot"
+      content="Farmers and Robots Farm"
     />
     <link
             rel="stylesheet"
@@ -29,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Tunnelbot</title>
+    <title>Farm</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
